[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
authors = [
  "garypen <garypen@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/garypen/spawn-scope"
homepage = "https://github.com/garypen/spawn-scope"
documentation = "https://github.com/garypen/spawn-scope?tab=readme-ov-file"
edition = "2024"

[workspace.dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5.3", features = ["full"] }
