[package]
name = "tower-scope-spawn"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
readme = "README.md"
keywords = ["task", "tokio", "tower"]
categories = ["concurrency"]
description = "structured concurrency management for tower services"

[dependencies]
pin-project = "1.1.10"
scope-spawn = { version = "0.1.0", path = "../scope-spawn" }
tower.workspace = true

[dev-dependencies]
axum.workspace = true
bytes = "1.6.0"
http-body-util = "0.1.1"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] } # Added for TokioIo
tokio = { workspace = true, features = ["full"] } # More features for our example
tokio-test = "0.4.5"
tower-test = "0.4.0"
